# NovogitBurlamaqui

./: .deployignore  .gitattributes  .gitignore  .replit  CORREÇÃO_SCREENSHOTS_FINAL.txt  CORREÇÕES_APLICADAS.txt  CORREÇÕES_COMPLETAS_SCREENSHOTS.txt  DEPLOY_CHECKLIST.md  ONDE_ACHAR_LOGS_BUILD.md  PRONTO_PARA_REPUBLISH.md  SOLUÇÃO_FINAL_SCREENSHOTS.txt  app.py  batch_queue_runner.py  build.sh  bundle.txt  check_batch_status.py  check_prod_status.py  cleanup_for_deploy.sh  diag_db.py  extensions.py  extract_batch_errors.py  fix_columns.py  forms.py  gunicorn.conf.py  logging_config.py  main.py  make_bundle.py  models.py  monitor_integration.py  pdf_rag_service.py  pyproject.toml  replit.md  requirements.txt  routes.py  routes_admin.py  routes_batch.py  routes_batch_backup_pre_parallel.py  rpa.py  rpa_backup_pre_parallel.py  rpa_status.py  (+8 more)
config/: brand_map.json  client_aliases.json  client_cell_map.json
data/: clientes_database.json  elaw_tipos_pedidos.json  trt_map.json
docs/: CLIENTES_DATABASE.md  POSICOES_ELAW.md  RPA_MONITOR_SETUP.md
extractors/: __init__.py  audiencia.py  brand_map.py  cadastro.py  client_priority.py  decisao.py  dictionary.py  document_classifier.py  header_parser.py  llm_extractor.py  ocr_utils.py  pipeline.py  posicao_mapping.py  postprocess.py  reextract.py  regex_utils.py  section_detector.py
instance/: rpa_current.json
juridico_inteligente/: extract.py
scripts/: backfill_annex_locations.py
templates/: base.html  dashboard.html  error.html  login.html
tools/: build_rpa_data.py
utils/: cell_inference.py  gap_filler.py  (+3 more)
(+32 files in other folders)
