[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Legal Process Management System with AI and RPA"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=21.2.0",
    "openai>=1.35.0",
    "playwright>=1.48.0",
    "psycopg2-binary>=2.9.9",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "python-slugify>=8.0.4",
    "rapidfuzz>=3.10.1",
    "sqlalchemy>=2.0.35",
    "tiktoken>=0.7.0",
    "werkzeug>=3.0.3",
    "wtforms>=3.1.2",
]
